changelog/v1.19.8/version-summary.md
<!-- @formatter:off -->
<!-- noinspection -->
<!-- Prevents auto format, for JetBrains IDE File > Settings > Editor > Code Style (Formatter Tab) > Turn formatter on/off with markers in code comments  -->

<!-- This file is automatically generate by logchange tool 🌳 🪓 => 🪵 -->
<!-- Visit https://github.com/logchange/logchange and leave a star 🌟 -->
<!-- !!! ⚠️ DO NOT MODIFY THIS FILE, YOUR CHANGES WILL BE LOST ⚠️ !!! -->


[1.19.8] - 2025-07-29
---------------------

### Dependency updates (10 changes)

- Upgraded com.fasterxml.jackson.core:jackson-databind from 2.19.1 to 2.19.2 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded com.fasterxml.jackson.dataformat:jackson-dataformat-yaml from 2.19.1 to 2.19.2 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded commons-io:commons-io from 2.19.0 to 2.20.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.commons:commons-text from 1.13.1 to 1.14.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.groovy:groovy-all from 4.0.27 to 4.0.28 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.graalvm.buildtools:native-maven-plugin from 0.10.6 to 0.11.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.junit.jupiter:junit-jupiter from 5.13.3 to 5.13.4 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.pitest:pitest-maven from 1.20.0 to 1.20.1 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded renovatebot/github-action from v43.0.3 to v43.0.4 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded renovatebot/github-action from v43.0.4 to v43.0.5 ([logchange-bot](team@logchange.dev) @logchange-bot)


