changelog/v1.19.9/version-summary.md
<!-- @formatter:off -->
<!-- noinspection -->
<!-- Prevents auto format, for JetBrains IDE File > Settings > Editor > Code Style (Formatter Tab) > Turn formatter on/off with markers in code comments  -->

<!-- This file is automatically generate by logchange tool 🌳 🪓 => 🪵 -->
<!-- Visit https://github.com/logchange/logchange and leave a star 🌟 -->
<!-- !!! ⚠️ DO NOT MODIFY THIS FILE, YOUR CHANGES WILL BE LOST ⚠️ !!! -->


[1.19.9] - 2025-08-30
---------------------

### Fixed (1 change)

- Fix: strip only a single leading 'v' or 'V' from version directory names when parsing !588 #548 ([Junie by JetBrains](https://github.com/jetbrains-junie) @jetbrains-junie)

### Dependency updates (15 changes)

- Upgraded actions/checkout from v4 to v5 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded actions/download-artifact from v4 to v5 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded actions/setup-java from v4 to v5 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded com.fasterxml.jackson.core:jackson-databind from 2.19.2 to 2.20.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded com.fasterxml.jackson.dataformat:jackson-dataformat-yaml from 2.19.2 to 2.20.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.commons:commons-compress from 1.27.1 to 1.28.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.groovy:groovy-all from 4.0.28 to 5.0.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.apache.maven.plugins:maven-javadoc-plugin from 3.11.2 to 3.11.3 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.assertj:assertj-core from 3.27.3 to 3.27.4 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.mockito:mockito-core from 5.18.0 to 5.19.0 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded org.pitest:pitest-maven from 1.20.1 to 1.20.2 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded renovatebot/github-action from v43.0.5 to v43.0.6 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded renovatebot/github-action from v43.0.6 to v43.0.7 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded renovatebot/github-action from v43.0.7 to v43.0.8 ([logchange-bot](team@logchange.dev) @logchange-bot)
- Upgraded renovatebot/github-action from v43.0.8 to v43.0.9 ([logchange-bot](team@logchange.dev) @logchange-bot)


